--- a/public/index.html
+++ b/public/index.html
@@ -54,7 +54,7 @@
                 <h1><a href="API/storage.html">Storage and Cache</a></h1>
                 <div class="meta">
                     <div class="key">Update:</div>
-                    <div class="value">Yesterday at 8:21 PM</div>
+                    <div class="value">Today at 2:46 PM</div>
                     <div class="key">Tags:</div>
                     <div class="value">
                         <ul>
